maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: ';' expected but 'return' found.
  }return 9999
   ^JediEscaper:50: error: ';' expected but 'return' found.
  }return 9999
   ^